--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The Siri wave replicated in a JS library.",
   "module": "dist/siriwave.m.js",
   "jsnext:main": "dist/siriwave.m.js",
+  "main": "dist/siriwave.js",
   "unpkg": "dist/siriwave.js",
   "amdName": "SiriWave",
   "scripts": {
