moving dependancies to dev dependancies because they somewhat embedded to dist and not needed actually. or maybe not

--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
 		"rollup-plugin-livereload": "^0.6.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-serve": "^0.6.0",
-		"rollup-plugin-uglify": "^6.0.0"
-	},
-	"dependencies": {
+		"rollup-plugin-uglify": "^6.0.0",
 		"lerp": "^1.0.3",
 		"raf": "^3.4.0"
-	}
+	},
+	"dependencies": {}
 }
