--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"description": "The Siri wave replicated in a JS library that does not rely on container. Forked from kopiro/siriwave",
 	"module": "dist/siriwave.m.js",
 	"jsnext:main": "dist/siriwave.m.js",
-	"main": "dist/siriwave.js",
+	"main": "dist/main.js",
 	"types": "dist/siriwave.d.ts",
 	"unpkg": "dist/siriwave.js",
-	"amdName": "SiriWave",
+	"amdName": "Siriwave",
 	"scripts": {
-		"build": "NODE_ENV=production rollup -c",
+		"build": "rollup -c --environment INCLUDE_DEPS,BUILD:production",
 		"dev": "rollup -c -w"
 	},
 	"repository": {
@@ -27,15 +27,15 @@
 		"eslint-plugin-import": "^2.16.0",
 		"eslint-plugin-jsx-a11y": "^6.2.1",
 		"eslint-plugin-react": "^7.12.4",
+		"lerp": "^1.0.3",
+		"raf": "^3.4.0",
 		"rollup": "^0.66.3",
 		"rollup-plugin-babel": "^4.0.3",
 		"rollup-plugin-commonjs": "^9.1.8",
 		"rollup-plugin-livereload": "^0.6.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-serve": "^0.6.0",
-		"rollup-plugin-uglify": "^6.0.0",
-		"lerp": "^1.0.3",
-		"raf": "^3.4.0"
+		"rollup-plugin-uglify": "^6.0.0"
 	},
 	"dependencies": {}
 }
