--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "siriwave",
-	"version": "1.3.1",
+	"version": "1.3.3",
 	"description": "The Siri wave replicated in a JS library that does not rely on container. Forked from kopiro/siriwave",
 	"module": "dist/siriwave.m.js",
 	"jsnext:main": "dist/siriwave.m.js",
@@ -27,17 +27,17 @@
 		"eslint-plugin-import": "^2.16.0",
 		"eslint-plugin-jsx-a11y": "^6.2.1",
 		"eslint-plugin-react": "^7.12.4",
-		"lerp": "^1.0.3",
-		"raf": "^3.4.0",
 		"rollup": "^0.66.3",
 		"rollup-plugin-babel": "^4.0.3",
 		"rollup-plugin-commonjs": "^9.1.8",
 		"rollup-plugin-livereload": "^0.6.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-serve": "^0.6.0",
-		"rollup-plugin-uglify": "^6.0.0"
+		"rollup-plugin-uglify": "^6.0.0",
+		"rollup-plugin-copy": "^3.3.0"
 	},
 	"dependencies": {
-		"rollup-plugin-copy": "^3.3.0"
+		"lerp": "^1.0.3",
+		"raf": "^3.4.0"
 	}
 }
