--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"rollup-plugin-uglify": "^6.0.0"
 	},
 	"dependencies": {
-		"raf": "^3.4.0"
+		"raf": "^3.4.0",
+		"siriwave": "github:jkovzels/siriwave"
 	}
 }
