--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
 		"rollup-plugin-uglify": "^6.0.0"
 	},
 	"dependencies": {
-		"raf": "^3.4.0",
-		"siriwave": "github:jkovzels/siriwave"
+		"raf": "^3.4.0"
 	}
 }
